# compilation

./: .gitignore  LICENSE  README.md  minipython.bat  pyproject.toml  register_minipython.ps1  requirements.txt  test.minipython
Analyse_Lark_ Automatique/: analyse_minipython.py  minipython.lark
minipython/: __main__.py  interpreter.py
