[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minipython"
version = "0.1.0"
authors = [
  { name="bouzouina meryem" },
]
description = "Un interpréteur simple pour le langage MiniPython"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anytree",
    "lark",
]

[project.scripts]
minipython = "minipython.interpreter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minipython*"]
